--- a/ScribbleSprinter/ScribbleSprinter/ScribbleSprinter.csproj
+++ b/ScribbleSprinter/ScribbleSprinter/ScribbleSprinter.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MudBlazor" Version="6.19.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
 </Project>
