--- a/ScribbleSprinter/ScribbleSprinter/ScribbleSprinter.csproj
+++ b/ScribbleSprinter/ScribbleSprinter/ScribbleSprinter.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ScribbleSprinter.Client\ScribbleSprinter.Client.csproj" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
   </ItemGroup>
